Added R tutorial + files. CGW

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>This is the IPython Big Data Repository for Chris Wilson's lab at
+<h1>Welcome to the IPython Big Data Repository!</h1>
+<p>This is the IPython Big Data Repository for the Loma Linda "Big
+Data Analytics" course at
 Loma Linda University.</p>
 </body>
 </html>
